# cv-analyzer

./: README.md  pyproject.toml
analyze/: ai.py  app.py  create_job.py  database.py  helper.py  import_cv.py
analyze/drive/: authenticate.py  download_cv.py
analyze/models/: analysis.py  file.py  job.py  resum.py
